# vds-mcp

./: AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE.md  README.md
benches/: benchmark.rs
docs/: TODO.md  filesystem-architecture.md  filesystem-transition.md  installation.md  overview.md
models/: README.md
src/: bin.rs  document.rs  embedding_cache.rs  filesystem_service.rs  lib.rs  markdown.rs  mcp.rs  metadata.rs  search.rs  semantic.rs  service.rs  storage.rs.legacy  workspace.rs
tests/: markdown_golden.rs  mcp_protocol.rs  mcp_smoke.rs  mcp_smoke.rs.legacy  overview.rs  overview.rs.legacy
