[package]
name = "vds-mcp"
version = "1.1.0"
edition = "2024"
authors = ["Hans W. Uhlig"]
description = "Versioned Document Service MCP server for managing Markdown as stable, versioned section trees."
license = "Apache-2.0"
readme = "README.md"
keywords = ["mcp", "markdown", "documents", "versioning"]
categories = ["command-line-utilities", "development-tools"]
documentation = "https://github.com/huhlig/vds-mcp/blob/main/README.md"
repository = "https://github.com/huhlig/vds-mcp"
homepage = "https://github.com/huhlig/vds-mcp"
publish = true

[lib]
name = "vds"
path = "src/lib.rs"

[features]
default = []
semantic-search = ["dep:hnsw_vector_search"]

[dependencies]
axum = "0.8"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
hnsw_vector_search = { version = "0.1", optional = true }
pulldown-cmark = { version = "0.13", features = ["default"] }
rmcp = { version = "1", features = ["transport-io", "transport-streamable-http-server", "uuid"] }
redb = { version = "4", features = ["chrono_v0_4", "uuid"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v7"] }

[[bin]]
name = "vds-mcp"
path = "src/bin.rs"

[[bench]]
name = "benchmark"
harness = false
