[package]
name = "vds-mcp"
version = "2.1.0"
edition = "2024"
authors = ["Hans W. Uhlig"]
description = "Versioned Document Service MCP server for managing Markdown as stable, versioned section trees."
license = "Apache-2.0"
readme = "README.md"
keywords = ["mcp", "markdown", "documents", "versioning"]
categories = ["command-line-utilities", "development-tools"]
documentation = "https://github.com/huhlig/vds-mcp/blob/main/README.md"
repository = "https://github.com/huhlig/vds-mcp"
homepage = "https://github.com/huhlig/vds-mcp"
publish = true

[lib]
name = "vds"
path = "src/lib.rs"

[features]
# Default features: semantic search with embedded model on non-Windows platforms
# Windows users should build with --no-default-features (semantic search not supported)
default = ["semantic-search", "embed-model"]
semantic-search = ["dep:hnsw_vector_search"]
embed-model = ["semantic-search"]

[dependencies]
axum = "0.8"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
diffy = "0.5"
dirs = "6"
flate2 = "1"
glob = "0.3"
hex = "0.4"
notify = "8"
pulldown-cmark = { version = "0.13", features = ["default"] }
rmcp = { version = "1", features = ["transport-io", "transport-streamable-http-server", "uuid"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
sha2 = "0.11"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v7"] }
postcard = { version = "1.1.3", features = ["use-std", "use-crc"] }
zstd = "0.13"

# Semantic search dependencies - only available on Linux and macOS
[target.'cfg(any(target_os = "linux", target_os = "macos"))'.dependencies]
hnsw_vector_search = { version = "0.1", optional = true }


[[bin]]
name = "vds-mcp"
path = "src/bin.rs"
